--- a/Project/Windows/Dorothy/Dorothy.vcxproj.filters
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="3rdParty\Lua">
       <UniqueIdentifier>{b778508f-d7cd-45bd-9891-0fe5c526fa3a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Lua\tolua">
+      <UniqueIdentifier>{ec6d2c9a-2629-49b5-ab13-61aeebe8eaa5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Source\Basic\App.cpp">
@@ -69,23 +72,32 @@
     <ClCompile Include="..\..\..\Source\Lua\oLuaEngine.cpp">
       <Filter>Lua</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Source\Lua\tolua_event.cpp">
+    <ClCompile Include="..\..\..\Source\Lua\oLuaBinding.cpp">
       <Filter>Lua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Lua\oLuaCode.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Lua\oLuaManual.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Source\Lua\tolua_event.cpp">
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Lua\tolua_fix.cpp">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Lua\tolua_is.cpp">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Lua\tolua_map.cpp">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Lua\tolua_push.cpp">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Source\Lua\tolua_to.cpp">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -179,14 +191,20 @@
     <ClInclude Include="..\..\..\Source\Lua\oLuaEngine.h">
       <Filter>Lua</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Source\Lua\tolua_event.h">
+    <ClInclude Include="..\..\..\Source\Lua\oLuaBinding.h">
       <Filter>Lua</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Lua\oLuaManual.h">
+      <Filter>Lua</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Lua\tolua_event.h">
+      <Filter>Lua\tolua</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Source\Lua\tolua_fix.h">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Source\Lua\tolua++.h">
-      <Filter>Lua</Filter>
+      <Filter>Lua\tolua</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
